[project]
name = "pagey"
version = "0.3.0"
description = "Pagey is a Pagerduty slack bot."
requires-python = ">=3.10"

[tool.ruff]
target-version = "py314"
line-length = 88
output-format = "github"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "W", "UP"]
ignore = ["E501"]  # Ignore line too long for long comments

[tool.ruff.lint.isort]
known-first-party = ["pagey"]
